# langchain-rag-app

./: .gitignore  README.md  pyproject.toml
langchain-rag-bot/: app.py
